container dor icons and links

--- a/redesign2018/src/news-page-video.html
+++ b/redesign2018/src/news-page-video.html
@@ -92,13 +92,18 @@
                     November 1, 2018
                 </div>
             </div>
-            <div class="news-video__icons">
-                <div class="social-list">
-                    <a href="#" class="social-item social-item--vk"><span class="a11y-only">VK</span></a>
-                    <a href="#" class="social-item social-item--twitter"><span class="a11y-only">Twitter</span></a>
-                    <a href="#" class="social-item social-item--facebook"><span class="a11y-only">Facebook</span></a>
-                    <a href="#" class="social-item social-item--linkedin"><span class="a11y-only">Linkedin</span></a>
+            <div class="container">
+                <div class="news-video__icons">
+                    <div class="social-list">
+                        <a href="#" class="social-item social-item--vk"><span class="a11y-only">VK</span></a>
+                        <a href="#" class="social-item social-item--twitter"><span class="a11y-only">Twitter</span></a>
+                        <a href="#" class="social-item social-item--facebook"><span
+                                class="a11y-only">Facebook</span></a>
+                        <a href="#" class="social-item social-item--linkedin"><span
+                                class="a11y-only">Linkedin</span></a>
+                    </div>
                 </div>
+
             </div>
         </div>
     </div>
