Info and social network

--- a/redesign2018/src/news-page-video.html
+++ b/redesign2018/src/news-page-video.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<div id="root" class="about-page page-wrapper">
+<div id="root">
     <header id="header" class="main-header">
         <div class="container">
             <div class="logo-container">
@@ -87,12 +87,24 @@
 
     <div class="news-video">
         <div class="container">
-            <div class="news-video__content">
+            <div class="news-video__info">
                 <div class="news-video__heading">
                     November 1, 2018
                 </div>
+                <p class="news-video__info-text">NEWTOWN, Pa., Nov. 1, 2018 /PRNewswire/ -- EPAM Systems, Inc. (NYSE: EPAM), a leading<br>
+                    global provider of digital platform engineering and software development services, today<br>
+                    announced its acquisition of TH_NK, a digital agency with consulting at its core, headquartered<br>
+                    in London, with additional offices in Newcastle and Liverpool. In addition to strengthening<br>
+                    EPAM&apos;s digital and organizational consulting capabilities in the UK and Western European<br>
+                    markets, this acquisition will also enhance the company&apos;s global product and design offerings.<br>
+                    TH_NK, founded in 2004, will become a part of EPAM&apos;s fast growing Consulting and Digital<br>
+                    Engagement Practices.
+                </p>
+
+
             </div>
-            <div class="container">
+
+            <div class="container__links">
                 <div class="news-video__icons">
                     <div class="social-list">
                         <a href="#" class="social-item social-item--vk"><span class="a11y-only">VK</span></a>
@@ -103,7 +115,22 @@
                                 class="a11y-only">Linkedin</span></a>
                     </div>
                 </div>
-
+                <div class="news-video__links-title">
+                    <span>OTHER NEWS<span>
+                </div>
+                <ul class="news-video__circle">
+                    <li class="news-video__links-indent"><a href="#" class="color-lincs">EPAM Acquires TH_NK To Enhan
+                        …</a></li>
+                    <li class="news-video__links-indent"><a href="#" class="color-lincs"> EPAM Exceeds 500 Google Cl
+                        …</a></li>
+                    <li class="news-video__links-indent"><a href="#" class="color-lincs">Helen Shan Joins EPAM&apos;s
+                        Boar …</a></li>
+                </ul>
+                <div class="news-video__all-news">
+                   <span>
+                      See all news &raquo;
+                   </span>
+                </div>
             </div>
         </div>
     </div>
